--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -3,7 +3,7 @@
 }
 <div id="index">
     <div class="header">
-        <h1>Wedding Planner</h1>
+        <h1>Professional</h1>
     </div>
     <div class="mainContent">
         <a href="register"><button>Register!</button></a>
