--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -14,7 +14,7 @@
             <input type="text" name="Email"><br>
 
             <label for="Password">Password: </label>
-            <input type="text" name="Password"><br>
+            <input type="password" name="Password"><br>
 
             <input type="submit" value="Login!">
         </form>
