--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -30,11 +30,11 @@
             </div>
             <div class="form-group">
             <label for="Password">Password: </label>
-            <input type="text" name="Password"><br>
+            <input type="password" name="Password"><br>
             </div>
             <div class="form-group">
             <label for="PasswordConfirmation">Password Confirmation: </label>
-            <input type="text" name="PasswordConfirmation"><br>
+            <input type="password" name="PasswordConfirmation"><br>
             </div>
             <div class="form-group">
             <label for="Description">Description: </label>
